--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "heroku": "^7.59.2",
+    "jest": "^27.4.7",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "sequelize": "^6.12.0",
@@ -22,5 +23,8 @@
   },
   "engines": {
     "node": "14.17.5"
+  },
+  "devDependencies": {
+    "supertest": "^6.2.2"
   }
 }
