--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,6 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "heroku": "^7.59.2",
-    "jest": "^27.4.7",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "sequelize": "^6.12.0",
@@ -25,6 +25,7 @@
     "node": "14.17.5"
   },
   "devDependencies": {
+    "jest": "^27.5.1",
     "supertest": "^6.2.2"
   }
 }
